@@ -24,10 +24,11 @@ Maintenance
 * New security-related options: "DicomAlwaysAllowEcho"
 * Use "GBK" (frequently used in China) as an alias for "GB18030"
 * Experimental support of actively maintained Civetweb to replace Mongoose 3.8
+* Fix issue 31 for good (create new modality types for Philips ADW, GE Xeleris, GE AWServer)
 * Fix issue 64 (OpenBSD support)
 * Fix static compilation of DCMTK 3.6.2 on Fedora
 * Upgrade to Boost 1.65.1 in static builds
-* Fix issue 31 for good (create new modality types for Philips ADW, GE Xeleris, GE AWServer)
+* Upgrade to SQLite amalgamation 3.21.0 in static builds
 
 
 Version 1.3.0 (2017-07-19)
